Transition from Redis-based naming conventions to Valkey.
Also merge SDK differences between search and json modules.

--- a/vkmutil/Makefile
+++ b/vkmutil/Makefile
@@ -12,7 +12,7 @@ export CFLAGS
 
 CC:=$(shell sh -c 'type $(CC) >/dev/null 2>/dev/null && echo $(CC) || echo gcc')
 
-OBJS=util.o strings.o sds.o vector.o heap.o priority_queue.o alloc.o
+OBJS=util.o strings.o sds.o vector.o heap.o priority_queue.o alloc.o periodic.o cmdparse.o
 
 all: libvkmutil.a
 
@@ -21,6 +21,8 @@ clean:
 
 libvkmutil.a: $(OBJS)
 	ar rcs $@ $^
+
+test: all test_vector test_heap test_priority_queue test_periodic test_cmdparse
 
 test_vector: test_vector.o vector.o
 	$(CC) -Wall -o test_vector vector.o test_vector.o -lc -O0
@@ -33,3 +35,11 @@ test_heap: test_heap.o heap.o vector.o
 test_priority_queue: test_priority_queue.o priority_queue.o heap.o vector.o
 	$(CC) -Wall -o test_priority_queue priority_queue.o heap.o vector.o test_priority_queue.o -lc -O0
 	@(sh -c ./test_priority_queue)
+
+test_periodic: test_periodic.o periodic.o
+	$(CC) -Wall -o $@ $^ -lc -lpthread -O0
+	@(sh -c ./$@)
+
+test_cmdparse: test_cmdparse.o cmdparse.o
+	$(CC) -Wall -o $@ $^ -lc -lpthread -O0
+	@(sh -c ./$@)
