--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@
 *.so
 *.db
 .vscode
+vkmutil/test_cmdparse
+vkmutil/test_heap
+vkmutil/test_periodic
+vkmutil/test_priority_queue
 vkmutil/test_vector
